// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should reject other values 1`] = `
[
  {
    "code": "invalid_enum",
    "members": [
      1,
      2,
    ],
    "message": "Expected 1 | 2, received a number",
    "path": [],
    "received": "number",
  },
]
`;

exports[`should reject other values 2`] = `
[
  {
    "code": "invalid_enum",
    "members": [
      1n,
      2n,
    ],
    "message": "Expected 1n | 2n, received a bigint",
    "path": [],
    "received": "bigint",
  },
]
`;
